# bs-decode

./: bs-decode.opam  dune-project  tan-bs-decode.opam
src/: dune
test/: Decode_AsResult_OfCustom_test.re  Decode_AsResult_OfParseError_test.re  dune
