opam-version: "2.0"
synopsis: "BS Decode"
version: "3.0.0"
description: "Type-safe JSON decoding for ReasonML and OCaml"
maintainer: ["Michael Martin"]
authors: ["Michael Martin"]
license: "MIT"
homepage: "https://github.com/topagentnetwork/bs-decode"
bug-reports: "https://github.com/topagentnetwork/bs-decode/issues"
depends: [
  "dot-merlin-reader" {dev}
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0" & < "4.0.0"}
  "ocaml-lsp-server" {dev}
  "ocamlformat" {dev}
  "odoc" {with-doc}
  "tan-relude" 
  "tan-bastet" 
  "melange-jest" {>= "0.1.0"}
  "opam-check-npm-deps" {with-test}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
